Windows support with the new cross OS-version